--- a/index.html.html
+++ b/index.html.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand bg-body-tertiary bg-primary" data-bs-theme="dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Start BootStrap</a>
+          <a class="navbar-brand" href="#">BootStrap</a>
 
           <ul class="navbar-nav">
             <li class="nav-item">
